--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,6 @@ plugins {
 
 android {
     compileSdk 32
-
     defaultConfig {
         applicationId "ru.book.recipes"
         minSdk 26
@@ -43,6 +42,8 @@ android {
 dependencies {
     implementation 'androidx.core:core:1.8.0'
     implementation 'androidx.test:core-ktx:1.4.0'
+    implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
     def core_version = "1.8.0"
     def appcompat_version = "1.4.2"
     def mdc_version = "1.6.1"
@@ -74,14 +75,18 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
 //    implementation platform("com.google.firebase:firebase-bom:$firebase_version")
 //    implementation "com.google.firebase:firebase-messaging-ktx"
-    implementation "com.google.android.gms:play-services-base:$play_services_base_version"
+//    implementation "com.google.android.gms:play-services-base:$play_services_base_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
 
+    testImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.test.ext:junit:$ext_junit_version"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_core_version"
-    androidTestImplementation 'androidx.test:core:1.4.0'
-    androidTestImplementation 'androidx.test:runner:1.4.0'
-    androidTestImplementation 'androidx.test:rules:1.4.0'
 
+    implementation 'androidx.legacy:legacy-support-core-utils:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:preference-v7:28.0.0'
 
 }
